tests/fixtures/valid/multi/type_import_namespace_collision/src/academy/lib.gcl
pub type Student {
    StudentConstructor(mass: Mass),
    WeightlessStudent,
}

pub const node student_score: Dimensionless = 1.0;
