tests/fixtures/invalid/cross_universe_name_collision.gcl
// Cross-universe name collision: M is both a type and an index.
type M { Mk(v: Dimensionless) }
pub index M = { A, B };
